package com.elec390.teamb.ecg;

public class ECGDataCollectionService {

    private List<short> waveformDataBuffer;


}
