@startuml
package "Activities" <<rectangle>>  {
    class WorkoutActivity{
        -Button BeginWorkoutButton
        -Button EndWorkoutButton
        -Button PauseWorkoutButton
        -Button MakeCommentButton

    }

    class WorkoutHistoryActivity{
        -TODO
    }
    class WorkoutSessionDetailsActivity{
        -TODO
    }
    class SettingsActivity{
        - SharedPreferenceHelper sharedPreferenceHelper
        - Button SaveSettingsButton
        - Button EditSettingsButton

    }
    interface NavBar
}

together {
    class ECGDataCollectionService{
        + ECG_STATUS startECGCapture()
        + ECG_STATUS makeTimestampedComment(String)
        + ECG_STATUS getStatus()
        + void connectBLE()
        + void stopECGCapture()
        - Override BLE_Callback()
        - List<short> waveformDataBuffer
        - ECGSession currentSession
        - ECG_STATUS currentStatus
    }

    class DataStorage{
        + ECGSession openNewSession()
        + void closeNewSession (ECGSession, List<short> waveformData)
        + List<short> getWaveformData (ECGSession)
        + List<ECGSession> getSessionList()

        - List<ECGSession> SessionList
    }



    class SendDoctorDataService{
        - SharedPreferenceHelper sharedPreferenceHelper
    }
}
package "Data Classes" <<rectangle>>{
    class ECGSession{
        - Int sId
        - Date mSessionStart
        - Date mSessionEnd
        - String timestampedComments
        + getStartTime()
        + getStopTime()
        + getTimestampedComments()
    }

    Enum ECG_STATUS {
        RECORDING
        PAUSED
        DISCONNECTED
    }
}
NavBar ---|> WorkoutHistoryActivity
NavBar ---|> WorkoutActivity
NavBar ---|> SettingsActivity
"Data Classes" -[hidden]-- Activities
SettingsActivity -[hidden]-- DataStorage
WorkoutHistoryActivity -|> WorkoutSessionDetailsActivity
WorkoutActivity ---> ECGDataCollectionService
SendDoctorDataService <- DataStorage
DataStorage ->  ECGDataCollectionService
WorkoutHistoryActivity <---> DataStorage
WorkoutSessionDetailsActivity <--- DataStorage

@enduml
